--- a/css/stile.css
+++ b/css/stile.css
@@ -1,8 +1,10 @@
 body {
    background-color: #3995e0;
+   margin: 0;
 }
 p {
    color: chocolate;
+   font-size: 30px;
 }
 h2 {
    font-size: 50px;
